# scroll-sc-tools

./: Cargo.toml  README.md
scripts/: download-params.sh
src/: commands.rs  generate.rs  main.rs  utils.rs
src/digest/: compute.rs  mod.rs
src/verifier/: generate.rs  mod.rs
