[package]
name = "scroll-sc-tools"
version = "0.1.0"
edition = "2024"

[dependencies]

# openvm
openvm-native-recursion = { git = "https://github.com/openvm-org/openvm.git", rev = "3c35e9f", default-features = false }
openvm-sdk = { git = "https://github.com/openvm-org/openvm.git", rev = "3c35e9f", default-features = false, features = [
    "parallel",
    "bench-metrics",
] }
openvm-stark-sdk = { git = "https://github.com/openvm-org/stark-backend.git", rev = "b051e89" }

# revm
revm = "19.0"

# snark-verifier
snark-verifier-sdk = { version = "0.2.0", default-features = false, features = [
    "loader_halo2",
    "halo2-axiom",
    "display",
] }

# scroll-tech/zkvm-prover
scroll-zkvm-verifier = { git = "https://github.com/scroll-tech/zkvm-prover", tag = "v0.3.0" }

# miscellaneous
clap = "4"
eyre = "0.6"
hex = "0.4"

[patch.crates-io]
alloy-primitives = { git = "https://github.com/scroll-tech/alloy-core", branch = "v0.8.18-euclid-upgrade" }
ruint = { git = "https://github.com/scroll-tech/uint.git", branch = "v1.12.3" }
tiny-keccak = { git = "https://github.com/scroll-tech/tiny-keccak", branch = "scroll-patch-v2.0.2-euclid-upgrade" }

[patch."ssh://git@github.com/scroll-tech/openvm-gpu.git"]
openvm = { git = "ssh://git@github.com/scroll-tech/openvm-internal.git", rev = "30d96a9" }
openvm-algebra-complex-macros = { git = "ssh://git@github.com/scroll-tech/openvm-internal.git", rev = "30d96a9" }
openvm-algebra-guest = { git = "ssh://git@github.com/scroll-tech/openvm-internal.git", rev = "30d96a9" }
openvm-bigint-guest = { git = "ssh://git@github.com/scroll-tech/openvm-internal.git", rev = "30d96a9" }
openvm-build = { git = "ssh://git@github.com/scroll-tech/openvm-internal.git", rev = "30d96a9" }
openvm-circuit = { git = "ssh://git@github.com/scroll-tech/openvm-internal.git", rev = "30d96a9" }
openvm-custom-insn = { git = "ssh://git@github.com/scroll-tech/openvm-internal.git", rev = "30d96a9" }
openvm-continuations = { git = "ssh://git@github.com/scroll-tech/openvm-internal.git", rev = "30d96a9" }
openvm-ecc-guest = { git = "ssh://git@github.com/scroll-tech/openvm-internal.git", rev = "30d96a9" }
openvm-instructions = { git = "ssh://git@github.com/scroll-tech/openvm-internal.git", rev = "30d96a9" }
openvm-keccak256-guest = { git = "ssh://git@github.com/scroll-tech/openvm-internal.git", rev = "30d96a9" }
openvm-native-circuit = { git = "ssh://git@github.com/scroll-tech/openvm-internal.git", rev = "30d96a9" }
openvm-native-compiler = { git = "ssh://git@github.com/scroll-tech/openvm-internal.git", rev = "30d96a9" }
openvm-native-recursion = { git = "ssh://git@github.com/scroll-tech/openvm-internal.git", rev = "30d96a9" }
openvm-native-transpiler = { git = "ssh://git@github.com/scroll-tech/openvm-internal.git", rev = "30d96a9" }
openvm-pairing-guest = { git = "ssh://git@github.com/scroll-tech/openvm-internal.git", rev = "30d96a9" }
openvm-rv32im-guest = { git = "ssh://git@github.com/scroll-tech/openvm-internal.git", rev = "30d96a9" }
openvm-rv32im-transpiler = { git = "ssh://git@github.com/scroll-tech/openvm-internal.git", rev = "30d96a9" }
openvm-sdk = { git = "ssh://git@github.com/scroll-tech/openvm-internal.git", rev = "30d96a9" }
openvm-sha256-guest = { git = "ssh://git@github.com/scroll-tech/openvm-internal.git", rev = "30d96a9" }
openvm-transpiler = { git = "ssh://git@github.com/scroll-tech/openvm-internal.git", rev = "30d96a9" }
