[package]
name = "scroll-sc-tools"
version = "0.1.0"
edition = "2024"

[dependencies]

# openvm
openvm-native-recursion = { git = "ssh://git@github.com/axiom-crypto/openvm-private.git", branch = "patch-v1.2.0", default-features = false }
openvm-sdk = { git = "ssh://git@github.com/axiom-crypto/openvm-private.git", branch = "patch-v1.2.0", default-features = false, features = [
    "parallel",
    "bench-metrics",
] }
openvm-stark-sdk = { git = "ssh://git@github.com/axiom-crypto/stark-backend-private.git", branch = "patch-v1.1.0" }

# revm
revm = "19.0"

# snark-verifier
snark-verifier-sdk = { version = "0.2.0", default-features = false, features = [
    "loader_halo2",
    "halo2-axiom",
    "display",
] }

# scroll-tech/zkvm-prover
scroll-zkvm-verifier = { git = "https://github.com/scroll-tech/zkvm-prover", tag = "v0.4.2-build" }

# miscellaneous
clap = "4"
eyre = "0.6"
hex = "0.4"

[patch.crates-io]
alloy-primitives = { git = "https://github.com/scroll-tech/alloy-core", branch = "v0.8.18-euclid-upgrade" }
ruint = { git = "https://github.com/scroll-tech/uint.git", branch = "v1.12.3" }
tiny-keccak = { git = "https://github.com/scroll-tech/tiny-keccak", branch = "scroll-patch-v2.0.2-euclid-upgrade" }

[patch."ssh://git@github.com/axiom-crypto/openvm-private.git"]
openvm = { git = "ssh://git@github.com/scroll-tech/openvm-private.git", branch = "patch-v1.2.0", default-features = false }
openvm-algebra-complex-macros = { git = "ssh://git@github.com/scroll-tech/openvm-private.git", branch = "patch-v1.2.0", default-features = false }
openvm-algebra-guest = { git = "ssh://git@github.com/scroll-tech/openvm-private.git", branch = "patch-v1.2.0", default-features = false }
openvm-bigint-guest = { git = "ssh://git@github.com/scroll-tech/openvm-private.git", branch = "patch-v1.2.0", default-features = false }
openvm-build = { git = "ssh://git@github.com/scroll-tech/openvm-private.git", branch = "patch-v1.2.0", default-features = false }
openvm-circuit = { git = "ssh://git@github.com/scroll-tech/openvm-private.git", branch = "patch-v1.2.0", default-features = false }
openvm-custom-insn = { git = "ssh://git@github.com/scroll-tech/openvm-private.git", branch = "patch-v1.2.0", default-features = false }
openvm-continuations = { git = "ssh://git@github.com/scroll-tech/openvm-private.git", branch = "patch-v1.2.0", default-features = false }
openvm-ecc-guest = { git = "ssh://git@github.com/scroll-tech/openvm-private.git", branch = "patch-v1.2.0", default-features = false }
openvm-instructions ={ git = "ssh://git@github.com/scroll-tech/openvm-private.git", branch = "patch-v1.2.0", default-features = false }
openvm-keccak256-guest = { git = "ssh://git@github.com/scroll-tech/openvm-private.git", branch = "patch-v1.2.0", default-features = false }
openvm-native-circuit = { git = "ssh://git@github.com/scroll-tech/openvm-private.git", branch = "patch-v1.2.0", default-features = false }
openvm-native-compiler = { git = "ssh://git@github.com/scroll-tech/openvm-private.git", branch = "patch-v1.2.0", default-features = false }
openvm-native-recursion = { git = "ssh://git@github.com/scroll-tech/openvm-private.git", branch = "patch-v1.2.0", default-features = false }
openvm-native-transpiler = { git = "ssh://git@github.com/scroll-tech/openvm-private.git", branch = "patch-v1.2.0", default-features = false }
openvm-pairing-guest = { git = "ssh://git@github.com/scroll-tech/openvm-private.git", branch = "patch-v1.2.0", default-features = false }
openvm-rv32im-guest = { git = "ssh://git@github.com/scroll-tech/openvm-private.git", branch = "patch-v1.2.0", default-features = false }
openvm-rv32im-transpiler = { git = "ssh://git@github.com/scroll-tech/openvm-private.git", branch = "patch-v1.2.0", default-features = false }
openvm-sdk = { git = "ssh://git@github.com/scroll-tech/openvm-private.git", branch = "patch-v1.2.0", default-features = false, features = ["parallel", "bench-metrics", "evm-prove"] }
openvm-sha256-guest = { git = "ssh://git@github.com/scroll-tech/openvm-private.git", branch = "patch-v1.2.0", default-features = false }
openvm-transpiler = { git = "ssh://git@github.com/scroll-tech/openvm-private.git", branch = "patch-v1.2.0", default-features = false }

[patch."ssh://git@github.com/axiom-crypto/stark-backend-private.git"]
openvm-stark-backend = { git = "ssh://git@github.com/scroll-tech/stark-backend-private.git", branch = "patch-v1.1.0", default-features = false }
openvm-stark-sdk = { git = "ssh://git@github.com/scroll-tech/stark-backend-private.git", branch = "patch-v1.1.0", default-features = false }

[patch."ssh://git@github.com/axiom-crypto/plonky3-private.git"]
p3-air = { git = "ssh://git@github.com/scroll-tech/plonky3-private.git", rev = "51704e6036fba6edd58022eb0eceb9f44bc941fb" }
p3-field = { git = "ssh://git@github.com/scroll-tech/plonky3-private.git", rev = "51704e6036fba6edd58022eb0eceb9f44bc941fb" }
p3-commit = { git = "ssh://git@github.com/scroll-tech/plonky3-private.git", rev = "51704e6036fba6edd58022eb0eceb9f44bc941fb" }
p3-matrix = { git = "ssh://git@github.com/scroll-tech/plonky3-private.git", rev = "51704e6036fba6edd58022eb0eceb9f44bc941fb" }
p3-baby-bear = { git = "ssh://git@github.com/scroll-tech/plonky3-private.git", rev = "51704e6036fba6edd58022eb0eceb9f44bc941fb" }
p3-koala-bear = { git = "ssh://git@github.com/scroll-tech/plonky3-private.git", rev = "51704e6036fba6edd58022eb0eceb9f44bc941fb" }
p3-util = { git = "ssh://git@github.com/scroll-tech/plonky3-private.git", rev = "51704e6036fba6edd58022eb0eceb9f44bc941fb" }
p3-challenger = { git = "ssh://git@github.com/scroll-tech/plonky3-private.git", rev = "51704e6036fba6edd58022eb0eceb9f44bc941fb" }
p3-dft = { git = "ssh://git@github.com/scroll-tech/plonky3-private.git", rev = "51704e6036fba6edd58022eb0eceb9f44bc941fb" }
p3-fri = { git = "ssh://git@github.com/scroll-tech/plonky3-private.git", rev = "51704e6036fba6edd58022eb0eceb9f44bc941fb" }
p3-goldilocks = { git = "ssh://git@github.com/scroll-tech/plonky3-private.git", rev = "51704e6036fba6edd58022eb0eceb9f44bc941fb" }
p3-keccak = { git = "ssh://git@github.com/scroll-tech/plonky3-private.git", rev = "51704e6036fba6edd58022eb0eceb9f44bc941fb" }
p3-keccak-air = { git = "ssh://git@github.com/scroll-tech/plonky3-private.git", rev = "51704e6036fba6edd58022eb0eceb9f44bc941fb" }
p3-blake3 = { git = "ssh://git@github.com/scroll-tech/plonky3-private.git", rev = "51704e6036fba6edd58022eb0eceb9f44bc941fb" }
p3-mds = { git = "ssh://git@github.com/scroll-tech/plonky3-private.git", rev = "51704e6036fba6edd58022eb0eceb9f44bc941fb" }
p3-merkle-tree = { git = "ssh://git@github.com/scroll-tech/plonky3-private.git", rev = "51704e6036fba6edd58022eb0eceb9f44bc941fb" }
p3-monty-31 = { git = "ssh://git@github.com/scroll-tech/plonky3-private.git", rev = "51704e6036fba6edd58022eb0eceb9f44bc941fb" }
p3-poseidon = { git = "ssh://git@github.com/scroll-tech/plonky3-private.git", rev = "51704e6036fba6edd58022eb0eceb9f44bc941fb" }
p3-poseidon2 = { git = "ssh://git@github.com/scroll-tech/plonky3-private.git", rev = "51704e6036fba6edd58022eb0eceb9f44bc941fb" }
p3-poseidon2-air = { git = "ssh://git@github.com/scroll-tech/plonky3-private.git", rev = "51704e6036fba6edd58022eb0eceb9f44bc941fb" }
p3-symmetric = { git = "ssh://git@github.com/scroll-tech/plonky3-private.git", rev = "51704e6036fba6edd58022eb0eceb9f44bc941fb" }
p3-uni-stark = { git = "ssh://git@github.com/scroll-tech/plonky3-private.git", rev = "51704e6036fba6edd58022eb0eceb9f44bc941fb" }
p3-maybe-rayon = { git = "ssh://git@github.com/scroll-tech/plonky3-private.git", rev = "51704e6036fba6edd58022eb0eceb9f44bc941fb" } # the "parallel" feature is NOT on by default to allow single-threaded benchmarking
p3-bn254-fr = { git = "ssh://git@github.com/scroll-tech/plonky3-private.git", rev = "51704e6036fba6edd58022eb0eceb9f44bc941fb" }
